fixes for tests on Java 13