@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.ogema.tools</groupId>
         <artifactId>ogema-tools</artifactId>
-        <version>2.2.1</version>
+        <version>2.2.2-SNAPSHOT</version>
     </parent>
 
     <groupId>org.ogema.widgets</groupId>
@@ -143,15 +143,9 @@
             </build>
         </profile>
         <profile>
-            <id>java9</id><!-- java versions 9 and greater -->
+            <id>java9+10</id><!-- java versions 9 and greater -->
             <activation>
-                <!-- 
-                note: not using <jdk> due to a bug in our ancient ci server
-                    <jdk>[9,)</jdk>
-                -->
-                <file>
-                    <exists>${java.home}/jmods</exists>
-                </file>
+                <jdk>[9,11)</jdk>
             </activation>
             <properties>
                 <surefire-args>
@@ -159,6 +153,32 @@
                     --illegal-access=warn
                     --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
                     --add-modules java.xml.bind,java.xml.ws.annotation
+                </surefire-args>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                ${surefire-args}
+                            </argLine>
+                            <trimStackTrace>false</trimStackTrace>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java11+</id><!-- java versions 9 and greater -->
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <surefire-args>
+                    -ea
+                    --illegal-access=warn
+                    --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
                 </surefire-args>
             </properties>
             <build>
@@ -233,6 +253,11 @@
 	            <artifactId>standard-patterns</artifactId>
 	            <version>2.2.2-SNAPSHOT</version>
         	</dependency>
+            <dependency>
+                <groupId>org.ogema.ref-impl</groupId>
+                <artifactId>ogema-exam-base2</artifactId>
+                <version>2.2.2-SNAPSHOT</version>
+            </dependency>
         	<dependency>
 	            <groupId>org.ogema.widgets</groupId>
 	            <artifactId>widget-exam-base</artifactId>
